[package]
name = "hzrd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
ipnet = "2.11.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
