[package]
name = "hzrd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
dialoguer = "0.11.0"
dirs = "6.0.0"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }
